# THE_MATREX

./: .coverage  .env.example  .gitignore  404.html  ANTIGRAVITY_MEMORY.md  CRAWLERS_SAFE_WORKFLOW.md  DIAGNOSTIC.bat  DIAGNOSTIC.sh  HANDOVER.md  IGNITE_MATRIX.bat  NODE_JS_ASSESSMENT.md  PRODUCTION_READINESS_FINAL.md  README.md  SECURITY_VAULT.md  SOVEREIGN_CONSTITUTION.md  TEST_IGNITE_STARTUP.md  WEB_STACK_FIX_SUMMARY.md  WEB_STACK_TROUBLESHOOTING.md  auth_vault.py  create_keys_secure.py  demo_supreme_extraction.py  e2e_test.py  google_services_keys.env  index.html  inject_memory.py  load_test.py  matrix_main.py  monitor_telemetry.bat  neural_bus.py  oracle_critique.md  output.txt  package-lock.json  package.json  pyproject.toml  requirements.txt  skills_schema.json  start_matrix.bat  test_agent.py  test_joker.py  test_keys.py  (+5 more)
agents/: __init__.py  aegis_qa.py  base_agent.py  morpheus_agent.py  neo_agent.py  oracle_agent.py  smith_agent.py  trinity_agent.py
assets/: index-BGq5wPmw.css  index-BODBga0t.js  index-BlmetsIQ.js  index-C3FGSoj_.js  index-Ck2V0znc.js  index-Cru3TGnO.js  index-D3sAoVsG.js  index-DkwTYnq2.js  index-Dv_r12xA.css
config/: settings.py
core/: aegis_validator.py  auth_vault.py  engine.py  factory.py  failsafe.py  governance.py  key_router.py  librarian_crawler.py  matrix_vision.py  memory_manager.py  models.py  neural_bus.py  watchdog.py  zmq_hooks.py
dashboard/: package-lock.json  package.json  vite.config.js
memory/: genesis_memory.jsonl  inject_genesis_memory.py
secrets/: Google Cloud  G SuitGoogle Cloud  G.txt  SOVEREIGN_MASTER_VAULT.md  (+6 more)
(+31 files in other folders)
